# aqualink-control

./: .gitmodules  CMakeLists.txt  README.md  liquefaction.py  main.c
.github/workflows/: pylint.yml
documentation/: protocol_jandy_jxi.md
src/: aqualink-internal.h  aqualink_frame.c  jxi_heater.c  main.c  property.c  rs_allbutton_panel.c  rs_panel.c
tests/: test-protocol.c
tools/: README.tools.md  aquaproto.py  jxi_heater_control.py
